Fix overflow bug

--- a/packages/frontend/src/components/tokens/TokenDigestCard.scss
+++ b/packages/frontend/src/components/tokens/TokenDigestCard.scss
@@ -74,6 +74,7 @@
     width: 100%;
 
     .ValueContainer {
+      overflow: hidden;
       width: 100%;
       line-height: 1.1;
       min-height: 4.75rem;
